--- a/src/style.scss
+++ b/src/style.scss
@@ -68,6 +68,15 @@ h1 {
   line-height: 1;
   margin: 0.25rem;
   cursor: pointer;
+  user-select: none;
+  position: relative;
+
+  .selected-order {
+    position: absolute;
+    background: transparent;
+    top: 0;
+    right: 0;
+  }
 
   &.active {
     background-color: lighten($color: $blue, $amount: 25%);
@@ -113,6 +122,42 @@ h1 {
     }
     .t {
       background-color: lighten($color: $blue, $amount: 25%);
+    }
+  }
+}
+
+// Help
+.Help-Modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100vw;
+  padding: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba($blue, 0.8);
+  box-sizing: border-box;
+
+  .Help-Content {
+    padding: 2rem;
+    border-radius: 0.5rem;
+    background-color: $white;
+    max-height: calc(100vh - 8rem);
+    overflow: auto;
+    text-align: left;
+
+    button,
+    h2 {
+      display: block;
+      text-align: center;
+      margin: auto;
+      margin-bottom: 1rem;
+    }
+
+    & > * {
+      margin-bottom: 1rem;
     }
   }
 }
